# OXsync

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: event_handler.rs  file_operations.rs  file_store.rs  macros.rs  main.rs  start.rs  utils.rs
