[package]
name = "oxsync"
version = "0.1.0"
edition = "2021"
authors = ["Jules Tanguy"]
license = "MIT"
description = "oxsync is a file synchronization tool with a focus on 'watch for changes' feature. It enables fast, local reads with a remote filesystem"
repository = "https://github.com/JulesTanguy/oxsync/"

[dependencies]
async-recursion = "1.0.5"
blake3 = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
glob = "0.3.1"
notify = "6.1.1"
regex = "1.10.2"
time = "0.3.30"
time-macros = { version = "0.2.15", features = ["formatting"] }
tokio = { version = "1.33.0", features = ["fs", "sync", "io-util", "rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["time", "local-time", "ansi"] }
walkdir = "2.4.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # With all optimizations
strip = true # Remove debug symbols
