[package]
name = "oxsync"
version = "0.2.0"
edition = "2021"
authors = ["Jules Tanguy"]
license = "MIT"
description = "oxsync is a file synchronization tool. It enables fast, local reads with a remote filesystem"
repository = "https://github.com/JulesTanguy/oxsync/"

[dependencies]
blake3 = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
notify = { version = "6.1.1", default-features = false }
time = { version = "0.3.30", features = ["formatting", "alloc", "local-offset"] }
tokio = { version = "1.33.0", features = ["fs", "sync", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1.14", default-features = false }
walkdir = "2.4.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # With all optimizations
strip = true # Remove debug symbols
