[package]
name = "oxsync"
version = "0.2.1"
edition = "2021"
authors = ["Jules Tanguy"]
license = "MIT"
description = "oxsync is a file synchronization tool. It enables fast, local reads with a remote filesystem"
repository = "https://github.com/JulesTanguy/oxsync/"

[dependencies]
ahash = "0.8.6"
blake3 = "1.5.0"
clap = { version = "4.4.10", features = ["derive"] }
lru = "0.12.1"
notify = { version = "6.1.1", default-features = false }
time = { version = "0.3.30", features = ["formatting", "alloc", "local-offset"] }
tokio = { version = "1.34.0", features = ["fs", "sync", "rt-multi-thread", "macros", "time"] }
tokio-stream = { version = "0.1.14", default-features = false }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # With all optimizations
strip = true # Remove debug symbols
